--- a/src/configs/path_tag.yaml
+++ b/src/configs/path_tag.yaml
@@ -1,14 +1,22 @@
-GetSystemDateAndTime: 'src/soap/get_system_date_and_time.xml'
-GetCapabilities: 'src/soap/get_capabilities.xml'
-GetDeviceInformation: 'src/soap/get_device_information.xml'
-GetScopes: 'src/soap/get_scopes.xml'
-GetServices: 'src/soap/get_services.xml'
-GetNetworkInterfaces: 'src/soap/get_network_interfaces.xml'
-GetDNS: 'src/soap/get_dns.xml'
-GetProfiles: 'src/soap/get_profiles.xml'
-GetStreamUri: 'src/soap/get_stream_uri.xml'
-GetSnapshotUri: 'src/soap/get_snapshot_uri.xml'
-GetVideoSources: 'src/soap/get_video_sources.xml'
-GetVideoSourceConfiguration: 'src/soap/get_video_source_configuration.xml'
-GetAudioSourceConfiguration: 'src/soap/get_audio_source_configuration.xml'
-GetProfile: 'src/soap/get_profile.xml'
+GetSystemDateAndTime: 'src/soap/system_date_and_time.xml'
+GetCapabilities: 'src/soap/capabilities.xml'
+GetDeviceInformation: 'src/soap/device_information.xml'
+GetScopes: 'src/soap/scopes.xml'
+GetServices: 'src/soap/services.xml'
+GetNetworkInterfaces: 'src/soap/network_interfaces.xml'
+GetDNS: 'src/soap/dns.xml'
+GetProfiles: 'src/soap/profiles.xml'
+GetStreamUri: 'src/soap/stream_uri.xml'
+GetSnapshotUri: 'src/soap/snapshot_uri.xml'
+GetVideoSources: 'src/soap/video_sources.xml'
+GetVideoSourceConfiguration: 'src/soap/video_source_configuration.xml'
+GetAudioSourceConfiguration: 'src/soap/audio_source_configuration.xml'
+GetProfile: 'src/soap/profile.xml'
+GetMetadataConfigurationOptions: 'src/soap/metadata_configuration_options.xml'
+GetMetadataConfiguration: 'src/soap/metadata_configuration.xml'
+Subscribe: 'src/soap/subscribe.xml'
+GetEventProperties: 'src/soap/event_properties.xml'
+GetAudioSources: 'src/soap/audio_source_configuration.xml'
+Renew: 'src/soap/renew.xml'
+Unsubscribe: 'src/soap/unsubscribe.xml'
+CreatePullPointSubscription: 'src/soap/create_pull_point_subscription.xml'
