изменено:      src/configs/common.yaml         изменено:      src/configs/path_tag.yaml         изменено:      src/configs/video_source.yaml         изменено:      src/event_service.py         изменено:      src/services.py         новый файл:    src/soap/pull_messages.xml         новый файл:    src/soap/pull_messages_nothing.xml

--- a/src/configs/video_source.yaml
+++ b/src/configs/video_source.yaml
@@ -1,7 +1,10 @@
+# home 192.168.0.144
+# office 192.168.56.1
+
 VideoSource:
   profiles: ['Profile1']
-  uri: 'rtsp://192.168.56.1:8554/cam_003'
+  uri: 'rtsp://192.168.0.144:8554/cam_003'
 
 VideoSource1:
   profiles: ['Profile2']
-  uri: 'rtsp://192.168.56.1:8554/cam_004'
+  uri: 'rtsp://192.168.0.144:8554/cam_004'
